# practice-devops

./: .gitignore  CHANGES.md  NOTICE.md  README.md  docker-compose.yml
authentication/: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
authentication/src/: config.rs  errors.rs  main.rs  middleware.rs  models.rs  state.rs  telemetry.rs
authentication/src/handlers/: login.rs  mod.rs  openid.rs  register.rs  status.rs
catalogue/: Dockerfile
catalogue-fastapi/: Dockerfile  README.md  requirements.txt
catalogue-fastapi/app/: app.py  config.py  database.py  models.py
catalogue-fastapi/app/templates/: index.html
combined-fastapi/: Dockerfile  README.md  docker-compose.yml  requirements.txt
combined-fastapi/app/: cache_manager.py  config.py  data_access.py  database_manager.py  exceptions.py  json_manager.py  main.py  models.py  products.json
database/: Dockerfile  init-db.sql
frontend/: .dockerignore  Dockerfile  README.md  app.js  config.json  package.json  tracing.js
frontend/public/: script.js
frontend/routes/: auth.js  origamis.js
frontend/test/: appTest.js
frontend/views/: index.ejs  login.ejs
otel-collector/: Dockerfile  otel-collector-config.yaml
product/: Dockerfile  README.md  requirements.txt
product/app/: __init__.py  config.py  main.py
recommendation/: .dockerignore  Dockerfile  go.mod  main.go
recommendation/telemetry/: telemetry.go
voting/: Dockerfile
voting-fastapi/: Dockerfile  README.md  requirements.txt
voting-fastapi/app/: config.py  main.py  models.py  services.py  votes.json
(+31 files in other folders)
