[package]
name = "authentication-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.2"
bcrypt = "0.15"
chrono = "0.4"
dotenv = "0.15"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono"] }
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
base64 = "0.22"
rsa = "0.9"
